--- a/templates/public_pages/register.html
+++ b/templates/public_pages/register.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css"  />
 <link href='http://fonts.googleapis.com/css?family=Exo:400,900' rel='stylesheet' type='text/css'>
-<title>Votepedia</title>
+<title>TwistedNation</title>
 </head>
 
 <body style="background:#e6edef;">
@@ -14,7 +14,7 @@
             
         <div id="wrap">
         <div id="header">
-                <h1 style="margin-left:120px;">votepedia</h1>
+                <h1 style="margin-left:120px;">twistednation</h1>
         </div><!--end header-->
         
                 <div id="userInfoName">
@@ -44,9 +44,6 @@
         </div>
         
         <div id="login">
-              
-            <h2>Welcome to votepdeia</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
         </div>
         
@@ -62,7 +59,7 @@
                 <a href="#"> Help</a>
                 <a href="#"> Terms</a>
                 <a href="#"> Privacy</a>
-                <h1>votepedia</h1>     
+                <h1>twistednation</h1>     
             
         </div><!--end footer-->
         
