--- a/templates/user_pages/common_elements/widget_footer.html
+++ b/templates/user_pages/common_elements/widget_footer.html
@@ -8,6 +8,6 @@
 <a href="#"> Help</a>
 <a href="#"> Terms</a>
 <a href="#"> Privacy</a>
-<h1>votepedia</h1>     
+<h1>twistednation</h1>     
 
 </div><!--end footer-->
