--- a/templates/user_pages/gallery.html
+++ b/templates/user_pages/gallery.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css"  />
     <link href='http://fonts.googleapis.com/css?family=Exo:400,900' rel='stylesheet' type='text/css'>
-    <title>{% block title %}Welcome{% endblock %} | Votepedia - Political Social Network</title>
+    <title>{% block title %}Welcome{% endblock %} | TwistedNation - Political Social Network</title>
 </head>
         <!-- ## Main Content Area## -->
         <div class="span10">
