--- a/templates/public_pages/login.html
+++ b/templates/public_pages/login.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css"  />
 <link href='http://fonts.googleapis.com/css?family=Exo:400,900' rel='stylesheet' type='text/css'>
-<title>Votepedia</title>
+<title>TwistedNation</title>
 </head>
 
 <body style="background:#e6edef;">
@@ -56,9 +56,7 @@
 						{{login_form.as_p}}
 						<input type="submit" value="Login" class="btn" />
 					</form>
-            <h2>Welcome to votepdeia</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        </div>
+          </div>
         </div>
         
         <!-- ##Footer## -->
@@ -73,7 +71,7 @@
                 <a href="#"> Help</a>
                 <a href="#"> Terms</a>
                 <a href="#"> Privacy</a>
-           	<h1>votepedia</h1>     
+           	<h1>twistednation</h1>     
             
         </div><!--end footer-->
         
