--- a/templates/public_pages/login.html
+++ b/templates/public_pages/login.html
@@ -14,7 +14,7 @@
 	    
 	<div id="wrap">
     	<div id="header">
-                <img src="{{STATIC_URL}}images/vp.png" alt="" style="width:176px; margin-left:-2px;">
+                <img src="{{STATIC_URL}}images/tw.png" alt="" style="width:176px; margin-left:-2px;">
     	</div><!--end header-->
     	
  		<div id="userInfoName">
