--- a/css/style.css
+++ b/css/style.css
@@ -969,7 +969,7 @@ input[type="submit"].btn::-moz-focus-inner {
 	overflow:hidden;
 }
 .mainContainer{
-background:url(../images/BG_02.png) repeat-x;
+background:url(../images/BG_02.png) no-repeat;
 }
 #wrap{
 	width:1100px;
