--- a/templates/public_pages/login.html
+++ b/templates/public_pages/login.html
@@ -14,42 +14,11 @@
 	    
 	<div id="wrap">
     	<div id="header">
-                <img src="{{STATIC_URL}}images/tw.png" alt="" style="width:176px; margin-left:-2px;">
+                <img src="https://i.imgur.com/8eSFFRY.jpg" alt="" style="width:176px; margin-left:-2px;">
     	</div><!--end header-->
     	
  		<div id="userInfoName">
-        	<div class="btn-group">
-        	<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="usrName"><h5>Welcome new user</h5></a>
-            		  <ul class="dropdown-menu">
-                      	<img src="{{STATIC_URL}}images/arrowWhiteUp_03.png"  />
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Create New Account</a></li>
-                        <li class="dividerNav"></li>
-                        <li><a href="#">Settings</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li class="dividerNav"></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Credits</a></li>
-                      </ul>
-             </div>    
-        </div><!--end userInfoName-->    
-        <div id="splashContent">
-        <div id="signup">
-            <h4>Register</h4>
-            <form action="/register/" method="POST" >
-                {%csrf_token%}
-                {% for field in register_form %}
-                    {{ field.label_tag }}
-                    {{ field }}
-                    <br />
-                    {{ field.help_text }}
-                {% endfor %}
-                <br />
-                <input type="submit" value="Register" class="btn" />
-            </form>
-        </div>
-        
-        <div id="login">
+      <div id="login">
             	<h4>Login</h4>
 					<form action="." method="POST" >
 						{%csrf_token%}
@@ -57,7 +26,7 @@
 						<input type="submit" value="Login" class="btn" />
 					</form>
           </div>
-        </div>
+       </div>
         
         <!-- ##Footer## -->
         <div id="footer" class="spanfooter">
