--- a/templates/public_pages/login.html
+++ b/templates/public_pages/login.html
@@ -8,13 +8,13 @@
 <title>TwistedNation</title>
 </head>
 
-<body style="background:#e6edef;">
+<body>
 <div class="mainContainer">
 <div class="container">
 	    
 	<div id="wrap">
     	<div id="header">
-                <img src="https://i.imgur.com/8eSFFRY.jpg" alt="" style="width:176px; margin-left:-2px;">
+                <img src="https://i.imgur.com/10U5ww6.png" alt="" style="width:176px; margin-left:-2px;">
     	</div><!--end header-->
     	
  		<div id="userInfoName">
@@ -28,21 +28,7 @@
           </div>
        </div>
         
-        <!-- ##Footer## -->
-        <div id="footer" class="spanfooter">
-        	<!--
-            <div class="divider">
-            </div><!--end divider-->
-            
-            <p>Voice Of The Electorate. © 2012. All Rights Reserved.</p>
-            
-	            <a href="#">About</a>
-                <a href="#"> Help</a>
-                <a href="#"> Terms</a>
-                <a href="#"> Privacy</a>
-           	<h1>twistednation</h1>     
-            
-        </div><!--end footer-->
+       
         
     </div><!--end wrap-->
 
