--- a/templates/media/css/style.css
+++ b/templates/media/css/style.css
@@ -287,7 +287,7 @@ a:hover {
 }
 
 .container {
-  background:url(https://i.imgur.com/10U5ww6.png) no-repeat;
+  background:url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg) no-repeat;
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -1220,13 +1220,13 @@ a:hover {
     }
 
     .mainContainer {
-      background:url(https://i.imgur.com/10U5ww6.png) no-repeat;
+      background:url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg) no-repeat;
       background-size: cover;
       width: 100%;
     }
 
     #wrap {
-      background:url(https://i.imgur.com/10U5ww6.png) no-repeat;
+      background:url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg) no-repeat;
       background-size: cover;
       width: 100%;
 
