--- a/templates/media/css/style.css
+++ b/templates/media/css/style.css
@@ -98,14 +98,9 @@ textarea {
   clear: both;
 }
 
-body {}
-
 body {
-  background-image: url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin: 0;
+  overflow: -moz-hidden-unscrollable;
+    margin: 0;
   font-size: 14px;
   line-height: 20px;
 }
@@ -267,8 +262,9 @@ a:hover {
 .container {
   background:url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg) no-repeat;
   background-position: center;
-  background-size: cover;
-  width: 100%;
+  background-size: contain;
+  width: 80%;
+  min-height: 580px;
   }
 
   .container:before,
@@ -1198,8 +1194,6 @@ a:hover {
     }
 
     .mainContainer {
-      background:url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg) no-repeat;
-      background-size: cover;
       width: 100%;
     }
 
