--- a/templates/media/css/style.css
+++ b/templates/media/css/style.css
@@ -262,7 +262,7 @@ a:hover {
 
 .container {
   background:url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg) no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: contain;
   background-color: #000;
   position: fixed;
