--- a/admin/css/base.css
+++ b/admin/css/base.css
@@ -710,10 +710,7 @@ table#change-history tbody th {
 /* PAGE STRUCTURE */
 
 #container {
-    background-image: (url(/images/twBGladyliberty.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: fixed;
+    position: relative;
     width: 100%;
     min-width: 760px;
     padding: 0;
