--- a/templates/media/css/style.css
+++ b/templates/media/css/style.css
@@ -955,7 +955,8 @@ input[type="submit"].btn::-moz-focus-inner {
 background:url(../images/BG_02.png) repeat-x;
 }
 #wrap{
-	width:1100px;
+  width:1100px;
+  min-height: 800px;
 	margin:0 auto 0 auto;
 }
 
@@ -1132,7 +1133,7 @@ background:url(../images/BG_02.png) repeat-x;
 
 /*------- Content Area Space-------*/
 .span10{
-	background:#fff;
+	background:#ffffffc9;
 	border-left:2px solid #999;
 	border-right:20px solid #fff;
 	min-height:750px;
