--- a/templates/user_pages/notifications/notifications.html
+++ b/templates/user_pages/notifications/notifications.html
@@ -11,7 +11,7 @@
          	<div class="friendNotifBlock">
             <a href="/profile/{{related_member.user.username}}">
                 <div class="displayPic">
-                    <img src="/pp/{{related_member.member_who_added.photo}}" style="height:100%; width: 100%;" >
+                    <img src="/p/{{related_member.member_who_added.photo}}" style="height:100%; width: 100%;" >
                 </div><!--end displayPic-->
             </a>
             <p>
