--- a/templates/user_pages/polls/poll_search.html
+++ b/templates/user_pages/polls/poll_search.html
@@ -23,7 +23,7 @@
       </div><!--end dividerLight-->
       <div class="displayPic">  
       <a href="/profile/">
-      <img src="/pp/{{poll.member.photo}}">
+      <img src="/p/{{poll.member.photo}}">
           </a>
       </div><!--end displayPic-->
     <div class="time">
