--- a/templates/user_pages/search/search_members.html
+++ b/templates/user_pages/search/search_members.html
@@ -10,7 +10,7 @@
             <div class="individualFeed" style="overflow:hidden; display:block !important; width:100%; padding: 5px;">
                                             <a href="/profile/{{matching_user.username}}">
                                             <div class="displayPic">
-                                            <img src="/pp/{{matching_user.members.photo}}" style="height:100%; width: 100%;" >
+                                            <img src="/p/{{matching_user.members.photo}}" style="height:100%; width: 100%;" >
                                             </div><!--end displayPic-->
                                             
                                          </a>
