--- a/templates/user_pages/common_elements/widget_header.html
+++ b/templates/user_pages/common_elements/widget_header.html
@@ -1,5 +1,5 @@
             <div id="header">
-                <a href="/home/"><img src="{{STATIC_URL}}images/tw.png" alt="" style="width:176px; margin-left:-2px;"></a>
+                <a href="/home/"><img src="{{STATIC_URL}}images/vp.png" alt="" style="width:176px; margin-left:-2px;"></a>
             </div><!--end header-->
             <div id="searchBar">
               <form action="/search/" method="GET" style="margin:0 !important" >
