--- a/templates/user_pages/ajax_delivery/comment_single.html
+++ b/templates/user_pages/ajax_delivery/comment_single.html
@@ -1,5 +1,5 @@
 <div class="commentBox">
-<a href="/profile/{{comment.member.user.username}}"><img class="commentDP" src="/p/{{comment.member.photo}}"></a>
+<a href="/profile/{{comment.member.user.username}}"><img class="commentDP" src="/pp/{{comment.member.photo}}"></a>
 <div class="commentname" style="padding-right:3px;" >
 <p><strong><a href="/profile/{{comment.member.user.username}}">{{comment.member.user.first_name}} {{comment.member.user.last_name}}</a></strong><span style="float:right;" >
 	{% if user.members == comment.member %}
