--- a/templates/user_pages/common_elements/base_user.html
+++ b/templates/user_pages/common_elements/base_user.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{{STATIC_URL}}css/overcast/jquery-ui-1.10.2.custom.min.css" type="text/css"  />
     <link href='http://fonts.googleapis.com/css?family=Exo:400,900' rel='stylesheet' type='text/css'>
     <script src="{{STATIC_URL}}js/tiny_mce/tiny_mce.js" type="text/javascript" charset="utf-8"></script>
-    <title>{% block title %}Welcome{% endblock %} | TwistedNation - Political Social Network</title>
+    <title>{% block title %}Welcome{% endblock %} | Votepedia - Political Social Network</title>
 </head>
 
 <body>
