--- a/templates/user_pages/notifications/friends.html
+++ b/templates/user_pages/notifications/friends.html
@@ -9,7 +9,7 @@
          <div class="individualFeed" style="overflow:hidden; display:block !important; width:100%; padding: 5px;">
             <a href="/profile/{{related_member.user.username}}">
                 <div class="displayPic">
-                    <img src="/p/{{related_member.photo}}" style="height:100%; width: 100%;" >
+                    <img src="/pp/{{related_member.photo}}" style="height:100%; width: 100%;" >
                 </div><!--end displayPic-->
             </a>
             <p style="margin-left:65px;">
