--- a/templates/user_pages/polls/poll_create.html
+++ b/templates/user_pages/polls/poll_create.html
@@ -28,7 +28,7 @@
       </div><!--end dividerLight-->
       <div class="displayPic">  
       <a href="/profile/">
-      <img src="/p/{{user.members.photo}}">
+      <img src="/pp/{{user.members.photo}}">
           </a>
       </div><!--end displayPic-->
     <div class="time">
