--- a/templates/user_pages/profile/profile_view.html
+++ b/templates/user_pages/profile/profile_view.html
@@ -65,7 +65,7 @@
                      
                  </div><!--end profileDetials-->
                  
-                 <h3>{{member.user.first_name}}'s Activities on TwistedNation</h3>
+                 <h3>{{member.user.first_name}}'s Activities on Votepedia</h3>
                  
                           {% for each_feed in home_feed %}
                         {% if each_feed.type = 'POST' %}
