--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,9 @@ a:hover {
   float: right;
 }
 .container {
-  background-image: (url(/images/twBGladyliberty.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
   margin-right: auto;
   margin-left: auto;
-  
+  *zoom: 1;
 }
 .container:before,
 .container:after {
@@ -972,9 +969,7 @@ input[type="submit"].btn::-moz-focus-inner {
 	overflow:hidden;
 }
 .mainContainer{
-background:url(../images/BG_02.png) no-repeat;
-background-size: cover;
-width: 100%;
+background:url(../images/BG_02.png) repeat-x;
 }
 #wrap{
 	width:1100px;
@@ -1084,7 +1079,6 @@ width: 100%;
 	padding-left:20px;
 }
 #splashContent #signup{
-  display: none;
 	width:320px;
 	padding-right:10px;
 	float:left;
@@ -1791,7 +1785,7 @@ padding:0px 5px 0px 10px;
 	width:720px;
 }
 .spanfooter{
-  display: none;
+	width:700px;
 }
 #footer{
 	padding:40px 0px 0px 20px;
