--- a/templates/public_pages/login.html
+++ b/templates/public_pages/login.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" type="text/css"  />
 <link href='http://fonts.googleapis.com/css?family=Exo:400,900' rel='stylesheet' type='text/css'>
-<title>TwistedNation</title>
+<title>Votepedia</title>
 </head>
 
 <body style="background:#e6edef;">
@@ -14,7 +14,7 @@
 	    
 	<div id="wrap">
     	<div id="header">
-                <img src="{{STATIC_URL}}images/tw.png" alt="" style="width:176px; margin-left:-2px;">
+                <img src="{{STATIC_URL}}images/vp.png" alt="" style="width:176px; margin-left:-2px;">
     	</div><!--end header-->
     	
  		<div id="userInfoName">
@@ -33,7 +33,22 @@
                       </ul>
              </div>    
         </div><!--end userInfoName-->    
-                     
+        <div id="splashContent">
+        <div id="signup">
+            <h4>Register</h4>
+            <form action="/register/" method="POST" >
+                {%csrf_token%}
+                {% for field in register_form %}
+                    {{ field.label_tag }}
+                    {{ field }}
+                    <br />
+                    {{ field.help_text }}
+                {% endfor %}
+                <br />
+                <input type="submit" value="Register" class="btn" />
+            </form>
+        </div>
+        
         <div id="login">
             	<h4>Login</h4>
 					<form action="." method="POST" >
@@ -41,10 +56,26 @@
 						{{login_form.as_p}}
 						<input type="submit" value="Login" class="btn" />
 					</form>
-          </div>
+            <h2>Welcome to votepdeia</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        </div>
         </div>
         
-       
+        <!-- ##Footer## -->
+        <div id="footer" class="spanfooter">
+        	<!--
+            <div class="divider">
+            </div><!--end divider-->
+            
+            <p>Voice Of The Electorate. © 2012. All Rights Reserved.</p>
+            
+	            <a href="#">About</a>
+                <a href="#"> Help</a>
+                <a href="#"> Terms</a>
+                <a href="#"> Privacy</a>
+           	<h1>votepedia</h1>     
+            
+        </div><!--end footer-->
         
     </div><!--end wrap-->
 
