--- a/templates/media/css/style.css
+++ b/templates/media/css/style.css
@@ -178,6 +178,7 @@ a:hover {
   float: right;
 }
 .container {
+  background-image: url(https://lavenderonthesanjuanriver.com/wp-content/uploads/2020/06/twBGladyliberty.jpg);
   margin-right: auto;
   margin-left: auto;
   *zoom: 1;
