--- a/templates/public_pages/login.html
+++ b/templates/public_pages/login.html
@@ -14,7 +14,7 @@
 	    
 	<div id="wrap">
     	<div id="header">
-                <img src="{{STATIC_URL}}images/vp.png" alt="" style="width:176px; margin-left:-2px;">
+                <img src="https://i.imgur.com/10U5ww6.png" alt="" style="width:176px; margin-left:-2px;">
     	</div><!--end header-->
     	
  		<div id="userInfoName">
@@ -56,18 +56,13 @@
 						{{login_form.as_p}}
 						<input type="submit" value="Login" class="btn" />
 					</form>
-            <h2>Welcome to votepdeia</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        </div>
-        </div>
-        
-        <!-- ##Footer## -->
+                    <!-- ##Footer## -->
         <div id="footer" class="spanfooter">
         	<!--
             <div class="divider">
             </div><!--end divider-->
             
-            <p>Voice Of The Electorate. © 2012. All Rights Reserved.</p>
+            <p>Twisted Nation. © 2020. All Rights Reserved.</p>
             
 	            <a href="#">About</a>
                 <a href="#"> Help</a>
