--- a/templates/media/css/style.css
+++ b/templates/media/css/style.css
@@ -1153,7 +1153,7 @@ background:url(../images/BG_02.png) repeat-x;
 
 /*------- Content Area Space-------*/
 .span10{
-	background:#ffffffc9;
+	background:#fff;
 	border-left:2px solid #999;
 	border-right:20px solid #fff;
 	min-height:750px;
