--- a/templates/user_pages/home/base_home.html
+++ b/templates/user_pages/home/base_home.html
@@ -1,6 +1,6 @@
 {% extends "user_pages/common_elements/base_user.html" %}
 {%block title%}
-{{user.first_name}}'s Home
+{{user.first_name}}'s Home Page
 {%endblock%}
 {%block page_content%}
 {%include "user_pages/common_elements/widget_nav_top.html"%}
